  [Michele Simionato]
  * Fixed a bug in `disagg_sources` for mutex sources: src_mutex
    was not passed
  * Internal: forced the colon convention on mutex sources
  * Fixed a bug in the disaggregation with mutex sources incorrectly
    averaging over the rates and not the poes

python3-oq-engine (3.18.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Fixed the command `oq extract ruptures` producing wrong newlines on
    Windows

  [Paolo Tormene, Michele Simionato]
  * Fixed an ordering bug in the tagnames in `extract_agg_curves` breaking
    the QGIS plugin

  [Michele Simionato]
  * Fixed the function `get_mean_stddevs_cy14` to recover the same results
    for the Canada SHM6 model as in engine 3.11
  * Required at least Python 3.10.6 on mac and windows

  [Claudio Schill]
  * Optimized the Kuehn sigma_mu_adjustment calculation by replacing the
    multi-step interpolation with a single 2D/3D space interpolation

  [Michele Simionato]
  * Fixed a bug in calculations with a filtered site collection using the
    HM2018CorrelationModel
  * Internal: raised a clear error message when get_composite_source_model is
   called without passing a datastore in presence of multifault sources

  [Christopher Brooks]
  * Added non-ergodic implementation of Zhao et al. (2016) GMM (ray-tracing
    of travel paths through anelastically attenuating volcanic regions and
    subsequent adjustment of the path term based on this distance to reduce
    the predicted ground-motion).

  [Michele Simionato]
  * Optimized (2x) the generation of ground motion fields
  * Internal: using a single random number generator inside the GmfComputer
    and not one for each gsim, causing an artificial correlation between gsims
  * Implemented `maximum_distance_stations` and fixed another site
    collection filtering bug in conditioned GMFs
  * Extended conditioned GMFs to number_of_ground_motion_fields > 1
  * Disabled SLOW MODE on macOS, since the amount of free memory returned by