@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed another bug in disaggregation for mutex sources
   * Fixed a bug in `disagg_sources` for mutex sources: src_mutex
     was not passed
   * Internal: forced the colon convention on mutex sources
